--- a/frontend/src/scss/modules/_shifts.scss
+++ b/frontend/src/scss/modules/_shifts.scss
@@ -1,5 +1,4 @@
 .dates {
-  height: 100px;
   position: relative;
   &.container {
     @include wi-mq(mobile) {
@@ -7,6 +6,7 @@
     }
   }
   .item-block {
+    padding: 10px 0;
     @include wi-mq(mobile) {
       margin: 0;
     }
@@ -189,7 +189,6 @@
     flex-direction: column;
     margin: 0 auto;
     padding: 0 20px;
-    height: 100px;
     justify-content: center;
     position: relative;
     &.active {
@@ -255,8 +254,8 @@
 
 .rota__container {
   display: flex;
-  align-items: flex-start;
   margin: 4px 0;
+  min-height: 75px;
 }
 
 .shiftList {
@@ -488,7 +487,7 @@
       &-item {
         max-width: none;
         flex: 1;
-        height: 100px;
+        height: 100%;
         border-right: none;
         &:not(:last-child) {
           border-right: $border 3px solid;
